# airas-20260217-132043

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/actions/run-claude-code/: action.yml
.github/actions/run-open-code/: action.yml
.github/prompts/: run_code_generator.md  run_experiment_validator.md
.github/workflows/: compile_latex.yml  prepare_images_for_html.yml  prepare_images_for_latex.yml  run_code_generator.yml  run_evaluation.yml  run_experiment_validator.yml  run_full_experiment.yml  run_main_experiment.yml  run_pilot_experiment.yml  run_sanity_check.yml  run_trial_experiment.yml  run_visualization.yml
.opencode/: opencode.jsonc
.research/: research_history.json
.research/latex/agents4science_2025/: agents4science_checklist.tex  agents4science_template_japanese.md  template.tex
.research/latex/iclr2024/: template.tex
.research/latex/mdpi/: template.tex
config/: config.yaml
config/run/: comparative-0-gemma-3-4b-it-gsm8k.yaml  proposed-gemma-3-4b-it-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  preprocess.py
